--- a/index.html
+++ b/index.html
@@ -13,38 +13,42 @@ body {
 </style>
 </head>
 <body>
-<center>
+    <center>
 
- <img class="w3-image" style="top:0" align="right" src="fuchsia.png" width="80" height="70">
- 
-<h1 style="margin: 10px 150px ; position:fixedx ; border-style: dotted ;border-width: 5px ;border-color: #008CBA">Current location</h1>
+        <img class="w3-image" style="top:0" align="right" src="fuchsia.png" width="80" height="70">
 
-<button onclick="getLocation()" id="location" style=" background-color:#008CBA;margin-top:50px;
-margin-right:300;
-margin-bottom:300;
-margin-left:300;padding:5px 22px; font-size: 16px; position:fixed ;border-radius: 12px; color: white;
-  border: 2px solid #ac2a31 
-} ">Get location</button>
-</center>
+        <h1 style="margin: 10px 150px ; border-style: dotted ;border-width: 5px ;border-color: #008CBA">Current location</h1>
+
+        <button onclick="getLocation()" id="location" style=" background-color:#008CBA;margin-top:50px;
+margin-right:300px;
+margin-bottom:10px;
+margin-left:300px;padding:5px 22px; font-size: 16px ;border-radius: 12px; color: white;
+  border: 2px solid #ac2a31
+} ">
+            Get location
+        </button>
 
 
-<h6>
 
-<textarea style="display:none ;margin-top:100px;
+        <h6>
+
+<textarea style="display:none ;margin-top:10px;
 margin-right:300px;
 margin-bottom:20px;
-margin-left:250px ; padding:12px 22px " id ="demo" ></textarea>
+margin-left:300px ; padding:12px 22px " id="demo"></textarea>
 
 
-<button onclick="myFunction()" style="display:none; background-color:white;padding:5px 40px; font-size: 13px;margin-top:10px;
+            <button onclick="myFunction()" style="display:none; background-color:white;padding:5px 40px; font-size: 13px;margin-top:10px;
 margin-right:300px;
-margin-bottom:70px;
+margin-bottom:20px;
 margin-left:300px ; border-radius: 12px; color: white;
-  border: 2px solid #ac2a31 ;background-color:#ac2a31 " id="copyme" >Copy text</button>
+  border: 2px solid #ac2a31 ;background-color:#ac2a31 " id="copyme">
+                Copy text
+            </button>
 
-</h6>
+        </h6>
 
- 
+    </center>
 <script>
 var x = document.getElementById("demo");
 
