--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@ body {
 
         <h1 style="margin: 10px 150px ; border-style: dotted ;border-width: 5px ;border-color: #008CBA">Current location</h1>
 
-        <button onclick="getLocation()" id="location" style=" background-color:#008CBA;margin-top:50px;
-margin-right:300px;
-margin-bottom:10px;
-margin-left:300px;padding:5px 22px; font-size: 16px ;border-radius: 12px; color: white;
-  border: 2px solid #ac2a31
-} ">
+        <button onclick="getLocation()" id="location" style="        background-color: #008CBA;
+        margin-top: 50px;
+        margin-right: 300px;
+        margin-bottom: 10px;
+        margin-left: 330px;
+        padding: 5px 40px;
+        font-size: 13px;
+        border-radius: 12px;
+        color: white;
+        border: 2px solid #ac2a31
+    } ">
             Get location
         </button>
 
@@ -33,16 +38,19 @@ margin-left:300px;padding:5px 22px; font-size: 16px ;border-radius: 12px; color:
 
         <h6>
 
-<textarea style="display:none ;margin-top:10px;
-margin-right:300px;
-margin-bottom:20px;
-margin-left:300px ; padding:12px 22px " id="demo"></textarea>
+<textarea style="        display: none;
+        margin-top: 10px;
+        margin-right: 300px;
+        margin-bottom: 20px;
+        margin-left: 300px;
+        padding: 5px 40px
+" id="demo"></textarea>
 
 
-            <button onclick="myFunction()" style="display:none; background-color:white;padding:5px 40px; font-size: 13px;margin-top:10px;
+            <button onclick="myFunction()" style="display:none; background-color:white;padding:7px 40px; font-size: 13px;margin-top:10px;
 margin-right:300px;
 margin-bottom:20px;
-margin-left:300px ; border-radius: 12px; color: white;
+margin-left:330px ; border-radius: 12px; color: white;
   border: 2px solid #ac2a31 ;background-color:#ac2a31 " id="copyme">
                 Copy text
             </button>
